--- a/docs/src/pages/installation/docker.mdx
+++ b/docs/src/pages/installation/docker.mdx
@@ -41,7 +41,9 @@ Then run the services with the following command:
 docker compose up -d
 ```
 
-Once Share Me is deployed, users should look into setting up a reverse proxy. Visit [Proxy](/installation/proxy) for more information.
+After installing, head to [Configuration](/configuration) to setup PocketBase and check out other configuration options.
+
+Once Share Me is deployed and configured, users should look into setting up a reverse proxy. Visit [Proxy](/installation/proxy) for more information.
 
 ## Search
 
