--- a/docs/src/pages/installation/index.mdx
+++ b/docs/src/pages/installation/index.mdx
@@ -8,4 +8,8 @@ Share Me uses PocketBase and Next.js as its core stack. This means it can run as
 
 The recommended way to install Share Me is using Docker. See the [Docker](/installation/docker) guides.
 
+After installing, head to [Configuration](/configuration) to setup PocketBase and check out other configuration options.
+
+Once Share Me is deployed and configured, users should look into setting up a reverse proxy. Visit [Proxy](/installation/proxy) for more information.
+
 export default ({ children }) => <Layout>{children}</Layout>;
