docs: :memo: update Next.js base path and use Link component for anchors

--- a/docs/src/pages/authentication/index.mdx
+++ b/docs/src/pages/authentication/index.mdx
@@ -8,7 +8,7 @@ To disable sign-up, the create rule of the `users` collection should be set to `
 
 <div style={{ textAlign: "center" }}>
   <img
-    src="/users-rules.png"
+    src="/share-me/users-rules.png"
     alt="Users Collection API Rules"
     style={{ maxWidth: "min(100%, 600px)", margin: "0 auto 0.5rem auto", display: "block" }}
   />
@@ -23,7 +23,7 @@ To disable built-in auth entirely, go to the `users` collection options and disa
 
 <div style={{ textAlign: "center" }}>
   <img
-    src="/users-options.png"
+    src="/share-me/users-options.png"
     alt="Users Collection Options"
     style={{ maxWidth: "min(100%, 600px)", margin: "0 auto 0.5rem auto", display: "block" }}
   />
