--- a/docs/src/pages/configuration/file-size-limit.mdx
+++ b/docs/src/pages/configuration/file-size-limit.mdx
@@ -7,7 +7,7 @@ Since files are uploaded through PocketBase, their limits can be configured in t
 
 <div style={{ textAlign: "center" }}>
   <img
-    src="/file-size-limit.png"
+    src="/share-me/file-size-limit.png"
     alt="PocketBase Maximum File Size Limit"
     style={{ maxWidth: "min(100%, 600px)", margin: "0 auto 0.5rem auto", display: "block" }}
   />
