--- a/docs/src/pages/integrations/api-keys.mdx
+++ b/docs/src/pages/integrations/api-keys.mdx
@@ -5,6 +5,6 @@ import Image from "next/image";
 
 Share Me allows users to create custom integrations via its API using API keys. Users can create and manage API keys under the settings page.
 
-![API Key Management](/settings.webp)
+![API Key Management](/share-me/settings.webp)
 
 export default ({ children }) => <Layout>{children}</Layout>;
